generated/haskell/Eyg/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Eyg/Par.y
-----------------------------------------------------------------------------


rule 51 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	NamedReference -> L_NamedReference                 (3)
	Tag -> L_Tag                                       (4)
	Id -> L_Id                                         (5)
	Program -> Exp                                     (6)
	Exp -> Exp1                                        (7)
	Exp1 -> Exp2                                       (8)
	Exp1 -> 'let' MatchPattern '=' Exp2 ';' Exp        (9)
	Exp2 -> Exp3                                       (10)
	Exp2 -> '[' ListListItem ']'                       (11)
	Exp2 -> '{' ListRecordField '}'                    (12)
	Exp2 -> Tag Exp                                    (13)
	Exp2 -> '|' ListParam '|' '{' Exp '}'              (14)
	Exp2 -> 'perform' Exp2                             (15)
	Exp2 -> 'handle' Tag '(' Exp2 ',' Exp2 ')'         (16)
	Exp2 -> 'match' Exp2 '{' 'case' ListMatchItem '}'   (17)
	Exp3 -> Exp4                                       (18)
	Exp3 -> Exp3 '(' ListExp2 ')'                      (19)
	Exp3 -> Exp3 '.' Id                                (20)
	Exp4 -> Exp5                                       (21)
	Exp4 -> Id                                         (22)
	Exp4 -> Integer                                    (23)
	Exp4 -> '-' Integer                                (24)
	Exp4 -> String                                     (25)
	Exp4 -> NamedReference                             (26)
	Exp5 -> '(' Exp ')'                                (27)
	ListListItem ->                                    (28)
	ListListItem -> ListItem                           (29)
	ListListItem -> ListItem ',' ListListItem          (30)
	ListRecordField ->                                 (31)
	ListRecordField -> RecordField                     (32)
	ListRecordField -> RecordField ',' ListRecordField   (33)
	ListMatchItem ->                                   (34)
	ListMatchItem -> MatchItem                         (35)
	ListMatchItem -> MatchItem 'case' ListMatchItem    (36)
	ListExp2 ->                                        (37)
	ListExp2 -> Exp2                                   (38)
	ListExp2 -> Exp2 ',' ListExp2                      (39)
	ListParam ->                                       (40)
	ListParam -> Param                                 (41)
	ListParam -> Param ',' ListParam                   (42)
	MatchItem -> MatchPattern '->' Exp                 (43)
	MatchPattern -> Tag MatchPattern                   (44)
	MatchPattern -> '{' ListRecordField '}'            (45)
	MatchPattern -> Id                                 (46)
	MatchPattern -> '(' MatchPattern ')'               (47)
	RecordField -> Id ':' Exp                          (48)
	RecordField -> '..' Exp                            (49)
	Param -> Id                                        (50)
	Arg -> Exp                                         (51)
	ListItem -> Exp                                    (52)
	ListItem -> '..' Exp                               (53)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'-'            { PT _ (TS _ 4) }
	'->'           { PT _ (TS _ 5) }
	'.'            { PT _ (TS _ 6) }
	'..'           { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	';'            { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'['            { PT _ (TS _ 11) }
	']'            { PT _ (TS _ 12) }
	'case'         { PT _ (TS _ 13) }
	'handle'       { PT _ (TS _ 14) }
	'let'          { PT _ (TS _ 15) }
	'match'        { PT _ (TS _ 16) }
	'perform'      { PT _ (TS _ 17) }
	'{'            { PT _ (TS _ 18) }
	'|'            { PT _ (TS _ 19) }
	'}'            { PT _ (TS _ 20) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_NamedReference{ PT _ (T_NamedReference $$) }
	L_Tag          { PT _ (T_Tag $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	String          rule  2
	NamedReference  rule  3
	Tag             rule  4
	Id              rule  5
	Program         rule  6
	Exp             rule  7
	Exp1            rules 8, 9
	Exp2            rules 10, 11, 12, 13, 14, 15, 16, 17
	Exp3            rules 18, 19, 20
	Exp4            rules 21, 22, 23, 24, 25, 26
	Exp5            rule  27
	ListListItem    rules 28, 29, 30
	ListRecordField rules 31, 32, 33
	ListMatchItem   rules 34, 35, 36
	ListExp2        rules 37, 38, 39
	ListParam       rules 40, 41, 42
	MatchItem       rule  43
	MatchPattern    rules 44, 45, 46, 47
	RecordField     rules 48, 49
	Param           rule  50
	Arg             rule  51
	ListItem        rules 52, 53

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Program        goto state 8
	Exp            goto state 9
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'('            reduce using rule 1
	')'            reduce using rule 1
	','            reduce using rule 1
	'.'            reduce using rule 1
	';'            reduce using rule 1
	']'            reduce using rule 1
	'case'         reduce using rule 1
	'{'            reduce using rule 1
	'}'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	Exp4 -> Integer .                                   (rule 23)

	'('            reduce using rule 23
	')'            reduce using rule 23
	','            reduce using rule 23
	'.'            reduce using rule 23
	';'            reduce using rule 23
	']'            reduce using rule 23
	'case'         reduce using rule 23
	'{'            reduce using rule 23
	'}'            reduce using rule 23
	%eof           reduce using rule 23


State 4

	Exp4 -> String .                                    (rule 25)

	'('            reduce using rule 25
	')'            reduce using rule 25
	','            reduce using rule 25
	'.'            reduce using rule 25
	';'            reduce using rule 25
	']'            reduce using rule 25
	'case'         reduce using rule 25
	'{'            reduce using rule 25
	'}'            reduce using rule 25
	%eof           reduce using rule 25


State 5

	Exp4 -> NamedReference .                            (rule 26)

	'('            reduce using rule 26
	')'            reduce using rule 26
	','            reduce using rule 26
	'.'            reduce using rule 26
	';'            reduce using rule 26
	']'            reduce using rule 26
	'case'         reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 6

	Exp2 -> Tag . Exp                                   (rule 13)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 51
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 7

	Exp4 -> Id .                                        (rule 22)

	'('            reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	'.'            reduce using rule 22
	';'            reduce using rule 22
	']'            reduce using rule 22
	'case'         reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	%eof           reduce using rule 22


State 8

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 9

	Program -> Exp .                                    (rule 6)

	%eof           reduce using rule 6


State 10

	Exp -> Exp1 .                                       (rule 7)

	')'            reduce using rule 7
	','            reduce using rule 7
	';'            reduce using rule 7
	']'            reduce using rule 7
	'case'         reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 11

	Exp1 -> Exp2 .                                      (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8
	';'            reduce using rule 8
	']'            reduce using rule 8
	'case'         reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	%eof           reduce using rule 8


State 12

	Exp2 -> Exp3 .                                      (rule 10)
	Exp3 -> Exp3 . '(' ListExp2 ')'                     (rule 19)
	Exp3 -> Exp3 . '.' Id                               (rule 20)

	'('            shift, and enter state 49
	')'            reduce using rule 10
	','            reduce using rule 10
	'.'            shift, and enter state 50
	';'            reduce using rule 10
	']'            reduce using rule 10
	'case'         reduce using rule 10
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	%eof           reduce using rule 10


State 13

	Exp3 -> Exp4 .                                      (rule 18)

	'('            reduce using rule 18
	')'            reduce using rule 18
	','            reduce using rule 18
	'.'            reduce using rule 18
	';'            reduce using rule 18
	']'            reduce using rule 18
	'case'         reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 14

	Exp4 -> Exp5 .                                      (rule 21)

	'('            reduce using rule 21
	')'            reduce using rule 21
	','            reduce using rule 21
	'.'            reduce using rule 21
	';'            reduce using rule 21
	']'            reduce using rule 21
	'case'         reduce using rule 21
	'{'            reduce using rule 21
	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 15

	Exp5 -> '(' . Exp ')'                               (rule 27)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 48
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 16

	Exp4 -> '-' . Integer                               (rule 24)

	L_integ        shift, and enter state 2

	Integer        goto state 47

State 17

	Exp2 -> '[' . ListListItem ']'                      (rule 11)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'..'           shift, and enter state 46
	'['            shift, and enter state 17
	']'            reduce using rule 28
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 43
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14
	ListListItem   goto state 44
	ListItem       goto state 45

State 18

	Exp2 -> 'handle' . Tag '(' Exp2 ',' Exp2 ')'        (rule 16)

	L_Tag          shift, and enter state 26

	Tag            goto state 42

State 19

	Exp1 -> 'let' . MatchPattern '=' Exp2 ';' Exp       (rule 9)

	'('            shift, and enter state 40
	'{'            shift, and enter state 41
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Tag            goto state 37
	Id             goto state 38
	MatchPattern   goto state 39

State 20

	Exp2 -> 'match' . Exp2 '{' 'case' ListMatchItem '}'    (rule 17)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp2           goto state 36
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 21

	Exp2 -> 'perform' . Exp2                            (rule 15)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp2           goto state 35
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 22

	Exp2 -> '{' . ListRecordField '}'                   (rule 12)

	'..'           shift, and enter state 34
	'}'            reduce using rule 31
	L_Id           shift, and enter state 27

	Id             goto state 31
	ListRecordFieldgoto state 32
	RecordField    goto state 33

State 23

	Exp2 -> '|' . ListParam '|' '{' Exp '}'             (rule 14)

	'|'            reduce using rule 40
	L_Id           shift, and enter state 27

	Id             goto state 28
	ListParam      goto state 29
	Param          goto state 30

State 24

	String -> L_quoted .                                (rule 2)

	'('            reduce using rule 2
	')'            reduce using rule 2
	','            reduce using rule 2
	'.'            reduce using rule 2
	';'            reduce using rule 2
	']'            reduce using rule 2
	'case'         reduce using rule 2
	'{'            reduce using rule 2
	'}'            reduce using rule 2
	%eof           reduce using rule 2


State 25

	NamedReference -> L_NamedReference .                (rule 3)

	'('            reduce using rule 3
	')'            reduce using rule 3
	','            reduce using rule 3
	'.'            reduce using rule 3
	';'            reduce using rule 3
	']'            reduce using rule 3
	'case'         reduce using rule 3
	'{'            reduce using rule 3
	'}'            reduce using rule 3
	%eof           reduce using rule 3


State 26

	Tag -> L_Tag .                                      (rule 4)

	'('            reduce using rule 4
	'-'            reduce using rule 4
	'['            reduce using rule 4
	'handle'       reduce using rule 4
	'let'          reduce using rule 4
	'match'        reduce using rule 4
	'perform'      reduce using rule 4
	'{'            reduce using rule 4
	'|'            reduce using rule 4
	L_integ        reduce using rule 4
	L_quoted       reduce using rule 4
	L_NamedReferencereduce using rule 4
	L_Tag          reduce using rule 4
	L_Id           reduce using rule 4


State 27

	Id -> L_Id .                                        (rule 5)

	'('            reduce using rule 5
	')'            reduce using rule 5
	','            reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	':'            reduce using rule 5
	';'            reduce using rule 5
	'='            reduce using rule 5
	']'            reduce using rule 5
	'case'         reduce using rule 5
	'{'            reduce using rule 5
	'|'            reduce using rule 5
	'}'            reduce using rule 5
	%eof           reduce using rule 5


State 28

	Param -> Id .                                       (rule 50)

	','            reduce using rule 50
	'|'            reduce using rule 50


State 29

	Exp2 -> '|' ListParam . '|' '{' Exp '}'             (rule 14)

	'|'            shift, and enter state 70


State 30

	ListParam -> Param .                                (rule 41)
	ListParam -> Param . ',' ListParam                  (rule 42)

	','            shift, and enter state 69
	'|'            reduce using rule 41


State 31

	RecordField -> Id . ':' Exp                         (rule 48)

	':'            shift, and enter state 68


State 32

	Exp2 -> '{' ListRecordField . '}'                   (rule 12)

	'}'            shift, and enter state 67


State 33

	ListRecordField -> RecordField .                    (rule 32)
	ListRecordField -> RecordField . ',' ListRecordField    (rule 33)

	','            shift, and enter state 66
	'}'            reduce using rule 32


State 34

	RecordField -> '..' . Exp                           (rule 49)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 65
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 35

	Exp2 -> 'perform' Exp2 .                            (rule 15)

	')'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	']'            reduce using rule 15
	'case'         reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 36

	Exp2 -> 'match' Exp2 . '{' 'case' ListMatchItem '}'    (rule 17)

	'{'            shift, and enter state 64


State 37

	MatchPattern -> Tag . MatchPattern                  (rule 44)

	'('            shift, and enter state 40
	'{'            shift, and enter state 41
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Tag            goto state 37
	Id             goto state 38
	MatchPattern   goto state 63

State 38

	MatchPattern -> Id .                                (rule 46)

	')'            reduce using rule 46
	'->'           reduce using rule 46
	'='            reduce using rule 46


State 39

	Exp1 -> 'let' MatchPattern . '=' Exp2 ';' Exp       (rule 9)

	'='            shift, and enter state 62


State 40

	MatchPattern -> '(' . MatchPattern ')'              (rule 47)

	'('            shift, and enter state 40
	'{'            shift, and enter state 41
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Tag            goto state 37
	Id             goto state 38
	MatchPattern   goto state 61

State 41

	MatchPattern -> '{' . ListRecordField '}'           (rule 45)

	'..'           shift, and enter state 34
	'}'            reduce using rule 31
	L_Id           shift, and enter state 27

	Id             goto state 31
	ListRecordFieldgoto state 60
	RecordField    goto state 33

State 42

	Exp2 -> 'handle' Tag . '(' Exp2 ',' Exp2 ')'        (rule 16)

	'('            shift, and enter state 59


State 43

	ListItem -> Exp .                                   (rule 52)

	','            reduce using rule 52
	']'            reduce using rule 52


State 44

	Exp2 -> '[' ListListItem . ']'                      (rule 11)

	']'            shift, and enter state 58


State 45

	ListListItem -> ListItem .                          (rule 29)
	ListListItem -> ListItem . ',' ListListItem         (rule 30)

	','            shift, and enter state 57
	']'            reduce using rule 29


State 46

	ListItem -> '..' . Exp                              (rule 53)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 56
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 47

	Exp4 -> '-' Integer .                               (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	','            reduce using rule 24
	'.'            reduce using rule 24
	';'            reduce using rule 24
	']'            reduce using rule 24
	'case'         reduce using rule 24
	'{'            reduce using rule 24
	'}'            reduce using rule 24
	%eof           reduce using rule 24


State 48

	Exp5 -> '(' Exp . ')'                               (rule 27)

	')'            shift, and enter state 55


State 49

	Exp3 -> Exp3 '(' . ListExp2 ')'                     (rule 19)

	'('            shift, and enter state 15
	')'            reduce using rule 37
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp2           goto state 53
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14
	ListExp2       goto state 54

State 50

	Exp3 -> Exp3 '.' . Id                               (rule 20)

	L_Id           shift, and enter state 27

	Id             goto state 52

State 51

	Exp2 -> Tag Exp .                                   (rule 13)

	')'            reduce using rule 13
	','            reduce using rule 13
	';'            reduce using rule 13
	']'            reduce using rule 13
	'case'         reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	%eof           reduce using rule 13


State 52

	Exp3 -> Exp3 '.' Id .                               (rule 20)

	'('            reduce using rule 20
	')'            reduce using rule 20
	','            reduce using rule 20
	'.'            reduce using rule 20
	';'            reduce using rule 20
	']'            reduce using rule 20
	'case'         reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 53

	ListExp2 -> Exp2 .                                  (rule 38)
	ListExp2 -> Exp2 . ',' ListExp2                     (rule 39)

	')'            reduce using rule 38
	','            shift, and enter state 82


State 54

	Exp3 -> Exp3 '(' ListExp2 . ')'                     (rule 19)

	')'            shift, and enter state 81


State 55

	Exp5 -> '(' Exp ')' .                               (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27
	'.'            reduce using rule 27
	';'            reduce using rule 27
	']'            reduce using rule 27
	'case'         reduce using rule 27
	'{'            reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 56

	ListItem -> '..' Exp .                              (rule 53)

	','            reduce using rule 53
	']'            reduce using rule 53


State 57

	ListListItem -> ListItem ',' . ListListItem         (rule 30)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'..'           shift, and enter state 46
	'['            shift, and enter state 17
	']'            reduce using rule 28
	'handle'       shift, and enter state 18
	'let'          shift, and enter state 19
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp            goto state 43
	Exp1           goto state 10
	Exp2           goto state 11
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14
	ListListItem   goto state 80
	ListItem       goto state 45

State 58

	Exp2 -> '[' ListListItem ']' .                      (rule 11)

	')'            reduce using rule 11
	','            reduce using rule 11
	';'            reduce using rule 11
	']'            reduce using rule 11
	'case'         reduce using rule 11
	'{'            reduce using rule 11
	'}'            reduce using rule 11
	%eof           reduce using rule 11


State 59

	Exp2 -> 'handle' Tag '(' . Exp2 ',' Exp2 ')'        (rule 16)

	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'['            shift, and enter state 17
	'handle'       shift, and enter state 18
	'match'        shift, and enter state 20
	'perform'      shift, and enter state 21
	'{'            shift, and enter state 22
	'|'            shift, and enter state 23
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 24
	L_NamedReferenceshift, and enter state 25
	L_Tag          shift, and enter state 26
	L_Id           shift, and enter state 27

	Integer        goto state 3
	String         goto state 4
	NamedReference goto state 5
	Tag            goto state 6
	Id             goto state 7
	Exp2           goto state 79
	Exp3           goto state 12
	Exp4           goto state 13
	Exp5           goto state 14

State 60

	MatchPattern -> '{' ListRecordField . '}'           (rule 45)

	'}'            shift, and enter state 78


State 61

	MatchPattern -> '(' MatchPattern . ')'              (rule 47)
